# fill_the_blank_MCQ_generator

./: .gitignore  Makefile  README.md  pyproject.toml
generator/: generator.py
queries/: countries_query.txt
sparql_utils/: constants.py  utils.py
src/generator/: generator.py
src/sparql_utils/: constants.py  utils.py
src/streamlit/: streamlit_app.py
