[tool.poetry]
name = "fill_the_blank_mcq_generator"
version = "0.1.0"
description = ""
authors = ["Lucas <lucas.sor@sicara.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.14.5"
black = "^22.6.0"
mypy = "^0.971"
SPARQLWrapper = "^2.0.0"
pandas = "^1.4.3"
sense2vec = "^2.0.0"
yake = "^0.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
